<resources>
    <string name="app_name">DeliverBanChan</string>
    <string name="app_bar_no_back_btn_title">ORDERING</string>
    <string name="app_bar_cart_order_empty" />
    <string name="app_bar_order_list_title">Order List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_header_exhibition">한 번 주문하면
            \n두 번 반하는 반찬들"</string>
    <string name="main_header_main_dish">모두가 좋아하는
            \n든든한 메인 요리"</string>
    <string name="main_header_soup_dish">정성이 담긴
            \n뜨끈뜨끈 국물 요리"</string>
    <string name="main_header_side_dish">식탁을 풍성하게 하는
            \n정갈한 밑반찬"</string>

    <string name="format_nprice">%s원</string>
    <string name="format_sale_rate">%d%%</string>
    <string name="dialog_cart_message">선택한 상품이 장바구니에 담겼습니다.</string>
    <string name="dialog_cart_dismiss">계속 쇼핑하기</string>
    <string name="dialog_cart_move_to_cart">장바구니 확인</string>
    <string name="item_cart_header_select_cancel">선택해제</string>
    <string name="item_cart_header_select_delete">선택 삭제</string>
    <string name="item_cart_order_product_total_price">상품 주문 금액</string>
    <string name="item_cart_order_total_price">총 주문 금액</string>
    <string name="item_order_total_price">총 결제 금액</string>
    <string name="item_cart_order_delivery_price">배송료</string>
    <string name="item_cart_recently_viewed">최근 본 상품</string>
    <string name="item_cart_recently_viewed_show_total">전체보기</string>
    <string-array name="sort_spinner_item">
        <item>기본 정렬순</item>
        <item>금액 높은순</item>
        <item>금액 낮은순</item>
        <item>할인률순</item>
    </string-array>
    <string-array name="cart_fragment_tag_array">
        <item>CartMainFragment</item>
        <item>CartDeliveryCompleteFragment</item>
        <item>RecentlyViewedFragment</item>
    </string-array>
    <string-array name="cart_fragment_app_bar_title_array">
        <item>Cart</item>
        <item></item>
        <item>Recently viewed products</item>
    </string-array>

    <string-array name="order_fragment_tag_array">
        <item>OrderListFragment</item>
        <item>OrderDetailFragment</item>
    </string-array>
    <string name="item_cart_bottom_body_btn">최소주문금액을 확인해주세요</string>
    <string name="item_cart_header_select_all">전체 선택</string>
    <string name="item_cart_header_select_release">선택 해제</string>

    <string name="arrive_soon">곧 도착</string>
    <string name="recent">방금전</string>
    <string name="time_format">%1$s%2$s%3$s</string>
    <string name="order_format">%1$s 주문하기</string>
    <string name="order_form_free_delivery_format">%1$s을 더 담으면 무료배송</string>
    <string name="order_complete_enqueue">주문이 접수되었습니다.</string>
    <string name="order_complete_success">배송이 완료되었습니다.</string>
    <string name="limit_time_to_order_complete">배송까지 남은 시간</string>
    <string name="order_count">주문한 상품</string>
    <string name="empty_string">텅 빔~</string>
    <string name="amount_change">수량변경</string>
    <string name="time_limit_suffix">전</string>
    <string name="error_screen_retry">다시 시도하기</string>
    <string name="error_screen_cannot_load">화면을 불러오지 못했어요.</string>

</resources>