<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:shapeAppearanceOverlay="@style/cardViewDialog">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="315dp"
            android:layout_height="130dp">

            <TextView
                android:id="@+id/dialog_tv_message"
                style="@style/Widget.TextView.NotoSansKR_GreyScaleBlack14_Normal.Style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:text="@string/dialog_cart_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dialog_tv_dismiss"
                style="@style/Widget.TextView.NotoSansKR_PrimaryAccent14_Medium.Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base_text_space_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="24dp"
                android:text="@string/dialog_cart_dismiss"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                style="@style/Widget.TextView.NotoSansKR_GreyScaleBlack14_Medium.Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/dialog_cart_move_to_cart"
                app:layout_constraintBottom_toBottomOf="@id/dialog_tv_dismiss"
                app:layout_constraintEnd_toStartOf="@id/dialog_tv_dismiss"
                app:layout_constraintTop_toTopOf="@id/dialog_tv_dismiss" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>