<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="uiOrderInfo"
            type="com.woowahan.android10.deliverbanchan.domain.model.UiOrderInfo" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_scale_surface">

        <View
            android:id="@+id/order_info_view_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_scale_line"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_info_tv_product_item_price_description"
            style="@style/Widget.TextView.NotoSansKR_GreyScaleDefault14_Normal.Style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_24dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="@dimen/base_space_16dp"
            android:gravity="bottom"
            android:text="@string/item_cart_order_product_total_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_info_tv_item_price"
            style="@style/Widget.TextView.NotoSansKR_GreyScaleDefault14_Normal.Style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_24dp"
            android:layout_marginEnd="@dimen/base_space_16dp"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="@+id/order_info_tv_product_item_price_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/order_info_tv_product_item_price_description"
            app:setDeliveryPriceText="@{uiOrderInfo.itemPrice}" />

        <TextView
            android:id="@+id/order_info_tv_delivery_price_description"
            style="@style/Widget.TextView.NotoSansKR_GreyScaleDefault14_Normal.Style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_24dp"
            android:layout_marginTop="@dimen/rv_space_8dp"
            android:gravity="bottom"
            android:text="@string/item_cart_order_delivery_price"
            app:layout_constraintStart_toStartOf="@+id/order_info_tv_product_item_price_description"
            app:layout_constraintTop_toBottomOf="@+id/order_info_tv_product_item_price_description" />

        <TextView
            android:id="@+id/order_info_tv_delivery_price"
            style="@style/Widget.TextView.NotoSansKR_GreyScaleDefault14_Normal.Style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_24dp"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="@+id/order_info_tv_delivery_price_description"
            app:layout_constraintEnd_toEndOf="@+id/order_info_tv_item_price"
            app:layout_constraintTop_toTopOf="@+id/order_info_tv_delivery_price_description"
            app:setDeliveryPriceText="@{uiOrderInfo.deliveryFee}" />

        <View
            android:id="@+id/order_info_body_view"
            android:layout_width="@dimen/item_elevation_0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/rv_space_8dp"
            android:background="@color/grey_scale_line"
            app:layout_constraintEnd_toEndOf="@+id/order_info_tv_delivery_price"
            app:layout_constraintStart_toStartOf="@+id/order_info_tv_delivery_price_description"
            app:layout_constraintTop_toBottomOf="@id/order_info_tv_delivery_price_description" />

        <TextView
            android:id="@+id/order_info_tv_total_price_description"
            style="@style/Widget.TextView.NotoSansKR_GreyScaleBlack14_Medium.Style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_24dp"
            android:layout_marginTop="@dimen/rv_space_8dp"
            android:layout_marginBottom="8dp"
            android:gravity="bottom"
            android:text="@string/item_order_total_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/order_info_body_view"
            app:layout_constraintTop_toBottomOf="@+id/order_info_body_view" />

        <TextView
            android:id="@+id/order_info_tv_total_price"
            style="@style/Widget.TextView.NotoSansKR_GreyScaleBlack14_Medium.Style"
            isNPrice="@{false}"
            price="@{uiOrderInfo.totalPrice}"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_24dp"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="@+id/order_info_tv_total_price_description"
            app:layout_constraintEnd_toEndOf="@+id/order_info_body_view"
            app:layout_constraintTop_toTopOf="@+id/order_info_tv_total_price_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>